--- a/.eslintrc
+++ b/.eslintrc
@@ -1,37 +1,47 @@
 {
   // Specify the environments where the code will run
   "env": {
-    "jest": true,       // Enable Jest for testing
-    "browser": true     // Enable browser environment
+    "jest": true, // Enable Jest for testing
+    "browser": true // Enable browser environment
   },
-
   // Stop ESLint from searching for configuration in parent folders
   "root": true,
-
   // Specify the parser for TypeScript (using @typescript-eslint/parser)
   "parser": "@typescript-eslint/parser", // Leverages TS ESTree to lint TypeScript
-
   // Add additional rules and configuration options
-  "plugins": ["@typescript-eslint"],
-
+  "plugins": [
+    "@typescript-eslint"
+  ],
   // Extend various ESLint configurations and plugins
   "extends": [
-    "eslint:recommended",                   // ESLint recommended rules
-    "plugin:react/recommended",             // React recommended rules
+    "eslint:recommended", // ESLint recommended rules
+    "plugin:react/recommended", // React recommended rules
     "plugin:@typescript-eslint/recommended", // TypeScript recommended rules
     "plugin:@typescript-eslint/eslint-recommended", // ESLint overrides for TypeScript
-    "prettier",                             // Prettier rules
-    "plugin:prettier/recommended",          // Prettier plugin integration
-    "plugin:react-hooks/recommended",       // Recommended rules for React hooks
-    "plugin:storybook/recommended"          // Recommended rules for Storybook
+    "prettier", // Prettier rules
+    "plugin:prettier/recommended", // Prettier plugin integration
+    "plugin:react-hooks/recommended", // Recommended rules for React hooks
+    "plugin:storybook/recommended" // Recommended rules for Storybook
   ],
   "rules": {
-    "react/react-in-jsx-scope": "off",
-     "prettier/prettier": [
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-expressions": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "prettier/prettier": [
       "error",
       {
         "endOfLine": "auto"
       }
-    ]
+    ],
+    "eslint/no-param-reassign": "off",
+    "react/require-default-props": "off",
+    "import/no-unresolved": "off",
+    "import/no-cycle": "off",
+    "linebreak-style": "off",
+    "prefer-destructuring": "off"
   }
 }
