fix(develop): not use source map

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "jsx": "react-jsx", // Configures JSX support for React.
 
     /* Linting */
-    "strict": true, // Enables strict type checking.
+    "strict": false, // Enables strict type checking.
     "noUnusedLocals": true, // Flags unused local variables.
     "noUnusedParameters": true, // Flags unused function parameters.
     "noFallthroughCasesInSwitch": true, // Requires handling all cases in a switch statement.
