--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "smc-test-lib",
-  "version": "1.0.5",
+  "name": "sm-date-picker",
+  "version": "0.0.1",
   "description": "",
   "type": "module",
   "main": "dist/index.cjs.js",
